2007-03-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-common.txt: Added words.

2007-02-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Yet another fix to white space bug in th_brk(), as spotted by
	Suppachoke Santiwitchaya. This is just temporary fix for use while the
	planned redesign does not happen.

	* src/thbrk/thbrk.c (th_brk): Allow break between Thai punct and white
	space.

	* src/thbrk/thbrk.c (is_breakable): Allow break between punct and
	white space. Remove rule that inhibited break between space and
	MAIYAMOK. It was not sufficient anyway, as the space before MAIYAMOK
	was still wrapped.

	* ChangeLog: Fix wrong date in previous commit.

2007-02-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (is_breakable): Allow break before white space.
	This fixes wrong treatment of whitespace in HTML in mozlibthai 
	component, which caused glitches in webpages.

2007-01-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{common,geo,std}.txt: Added words.

2006-10-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version bump.

2006-10-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog: Converted to UTF-8.

	* NEWS: Updated.

	=== Version 0.1.7 ===

2006-10-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am: Specify LC_ALL=C to make sure 'sort' always works.

2006-10-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix 'make distcheck', plus a little enhancement on dict location.

	* src/thbrk/brk-maximal.c (brk_get_dict): Try openning dict at
	$LIBTHAI_DICTDIR environment before the default location.

	* tests/Makefile.am, +tests/test-thbrk.sh, +tests/test-thwbrk.sh:
	Added wrapper scripts to call test_th[w]brk programs with
	LIBTHAI_DICTDIR set to trie in build tree.

	* data/Makefile.am (EXTRA_DIST): Do not ship the auto-generated
	tdict.txt in source.
