@@ -1,0 +1,72 @@
+EXPORTS
+	TACchtype
+	TACchtype_
+	TACio_op
+	TACio_op_
+	_th_chlevel_tbl
+	_th_ctype_tbl
+	th_brk
+	th_brk_line
+	th_chlevel
+	th_init_cell
+	th_isaccept
+	th_isblvowel
+	th_iscombchar
+	th_iseng
+	th_isflvowel
+	th_isldvowel
+	th_isovershootcons
+	th_istaillesscons
+	th_isthai
+	th_isthcons
+	th_isthdiac
+	th_isthdigit
+	th_isthpunct
+	th_isthtone
+	th_isthvowel
+	th_istis
+	th_isundershootcons
+	th_isundersplitcons
+	th_isupvowel
+	th_macthai2uni
+	th_make_cells
+	th_next_cell
+	th_normalize
+	th_prev_cell
+	th_render_cell_mac
+	th_render_cell_tis
+	th_render_cell_win
+	th_render_text_mac
+	th_render_text_tis
+	th_render_text_win
+	th_strcoll
+	th_strxfrm
+	th_tis2uni
+	th_tis2uni_line
+	th_uni2macthai
+	th_uni2tis
+	th_uni2tis_line
+	th_uni2winthai
+	th_validate
+	th_wbrk
+	th_wbrk_line
+	th_wcchlevel
+	th_wcisblvowel
+	th_wciseng
+	th_wcisflvowel
+	th_wcisldvowel
+	th_wcisovershootcons
+	th_wcistaillesscons
+	th_wcisthai
+	th_wcisthcons
+	th_wcisthdiac
+	th_wcisthdigit
+	th_wcisthpunct
+	th_wcisthtone
+	th_wcisthvowel
+	th_wcistis
+	th_wcisundershootcons
+	th_wcisundersplitcons
+	th_wcisupvowel
+	th_winthai2uni
+	th_wnormalize
